# equiforge

./: .gitignore  Cargo.toml  LICENSE  README.md  WHITEPAPER.md  build-release.sh  start-mining.bat  wallet.json
docs/: index.html  wallet.html
equiforge_testnet/: anchors.json  db  wallet.json
launcher/: start-mainnet.bat  start-testnet.bat
src/: lib.rs  main.rs
src/core/: chain.rs  mod.rs  params.rs  script.rs  types.rs
src/crypto/: mod.rs  txid.rs
src/miner/: mod.rs
src/network/: mod.rs
src/pool/: mod.rs  pool_miner.rs
src/pow/: mod.rs
src/rpc/: explorer.html  mod.rs
src/storage/: mod.rs
src/wallet/: mod.rs
