[package]
name = "equiforge"
version = "1.0.0"
edition = "2021"
description = "EquiForge - A fair, accessible, ASIC-resistant blockchain"
license = "MIT"
authors = ["EquiForge Contributors"]
repository = "https://github.com/equiforge/equiforge"

[dependencies]
# Cryptography
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tokio = { version = "1.36", features = ["full"] }

# Merkle tree
merkle-cbt = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Embedded database
sled = "0.34"

# Utilities
ctrlc = { version = "3.4", features = ["termination"] }
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
